sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:7: error: '(' expected but identifier found.
    for i<-compteur to (len-2){
        ^